--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/ 4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 
     <title>Hello, world!</title>
@@ -183,7 +185,7 @@
 
           <!-- bottom cards -->
 
-          <section class=" last-section mt-5 container ">
+          <section class=" last-section mt-5 container mb-5">
             <div class="row d-flex align-items-center">
               <div class="col-md-7">
                 
@@ -235,6 +237,103 @@
           </div>
           </section>
     </main>
+
+    <footer class="bg-light text-dark pt-5 pb-4">
+      <div class=" container text-center text-md-left">
+        <div class="row text-center text-md-left">
+          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+            <h5 class="text-uppercase mb-4 font-weight-bold text-info">About Us</h5>
+            <hr class="mb-4">
+            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum alias assumenda blanditiis! Temporibus, numquam quasi reprehenderit veniam earum id delectus?</p>
+          </div>
+
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h5 class="text-uppercase mb-4 font-weight-bold text-info">Let Us Help</h5>
+            <hr class="mb-4">
+            <p class="paragraph">
+              <a href="" class="text-dark" style="text-decoration: none;">Your Profile</a>
+            </p>
+            <p class="paragraph">
+              <a href="" class="text-dark" style="text-decoration: none;">Your Orders</a>
+            </p>
+            <p class="paragraph">
+              <a href="" class="text-dark" style="text-decoration: none;">Manage Your Profile</a>
+            </p>
+            <p class="paragraph">
+              <a href="" class="text-dark" style="text-decoration: none;">Helpline</a>
+            </p>
+          </div>
+
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h5 class="text-uppercase mb-4 font-weight-bold text-info">Earn Money!!</h5>
+            <hr class="mb-4">
+            <p class="paragraph">
+              <a href="" class="text-dark" style="text-decoration: none;">Sell Your Product</a>
+            </p>
+            <p class="paragraph">
+              <a href="" class="text-dark" style="text-decoration: none;">Advertise Products</a>
+            </p>
+            <p class="paragraph">
+              <a href="" class="text-dark" style="text-decoration: none;">Manage Your Products</a>
+            </p>
+            <p class="paragraph">
+              <a href="" class="text-dark" style="text-decoration: none;">Helpline</a>
+            </p>
+          </div>
+
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+            <h5 class="text-uppercase mb-4 font-weight-bold text-info">Contact</h5>
+            <hr class="mb-4">
+            <p class="paragraph">
+              <li class="fa fa-address-book-o mr-5 "></li>Dhaka, Bangladesh
+            </p>
+
+            <p class="paragraph">
+              <li class="fa fa-envelope-o mr-5 "></li>abcdef@gmail.com
+            </p class="paragraph">
+
+            <p class="paragraph">
+              <li class="fa fa-phone mr-5 "></li>+8801010101010
+            </p class="paragraph">
+
+            <p class="paragraph">
+              <li class="fa fa-handshake-o mr-5 "></li>Thanks for visiting
+            </p>
+
+          </div>
+        </div>
+
+          <hr class="mb-4">
+          <div class="row d-flex justify-content-center">
+            <div>
+              <p>
+                &copy; copyright 2021. All rights reserved by: <a href=""><strong>Tamkin</strong></a>
+              </p>
+            </div>
+          </div>
+
+          <div class="row d-flex justify-content-center">
+            <div class="text-center">
+              <ul class="list-inline" style="text-decoration: none;">
+                <li class="list-inline-item icon-design">
+                  <a href="" class="text-dark"> <li class="fa fa-facebook-f"></li> </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="" class="text-dark"> <li class="fa fa-google-plus"></li> </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="" class="text-dark"> <li class="fa fa-instagram"></li> </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="" class="text-dark"> <li class="fa fa-youtube-play"></li> </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </footer>
 
 
 
