--- a/index.html
+++ b/index.html
@@ -238,17 +238,19 @@
           </section>
     </main>
 
+    <!-- footer section -->
+
     <footer class="bg-light text-dark pt-5 pb-4">
       <div class=" container text-center text-md-left">
         <div class="row text-center text-md-left">
           <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-info">About Us</h5>
+            <h5 class="text-uppercase mb-4 font-weight-bold text-info shadow">About Us</h5>
             <hr class="mb-4">
             <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum alias assumenda blanditiis! Temporibus, numquam quasi reprehenderit veniam earum id delectus?</p>
           </div>
 
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-info">Let Us Help</h5>
+            <h5 class="text-uppercase mb-4 font-weight-bold text-info shadow">Let Us Help</h5>
             <hr class="mb-4">
             <p class="paragraph">
               <a href="" class="text-dark" style="text-decoration: none;">Your Profile</a>
@@ -265,7 +267,7 @@
           </div>
 
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-info">Earn Money!!</h5>
+            <h5 class="text-uppercase mb-4 font-weight-bold text-info shadow">Earn Money!!</h5>
             <hr class="mb-4">
             <p class="paragraph">
               <a href="" class="text-dark" style="text-decoration: none;">Sell Your Product</a>
@@ -282,7 +284,7 @@
           </div>
 
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-info">Contact</h5>
+            <h5 class="text-uppercase mb-4 font-weight-bold text-info shadow">Contact</h5>
             <hr class="mb-4">
             <p class="paragraph">
               <li class="fa fa-address-book-o mr-5 "></li>Dhaka, Bangladesh
@@ -304,7 +306,7 @@
         </div>
 
           <hr class="mb-4">
-          <div class="row d-flex justify-content-center">
+          <div class="row d-flex justify-content-center shadow">
             <div>
               <p>
                 &copy; copyright 2021. All rights reserved by: <a href=""><strong>Tamkin</strong></a>
@@ -312,20 +314,20 @@
             </div>
           </div>
 
-          <div class="row d-flex justify-content-center">
-            <div class="text-center">
+          <div class="row d-flex justify-content-center ">
+            <div class="text-center ">
               <ul class="list-inline" style="text-decoration: none;">
                 <li class="list-inline-item icon-design">
-                  <a href="" class="text-dark"> <li class="fa fa-facebook-f"></li> </a>
+                  <a href="" class="text-dark"> <li class="fa fa-facebook-f"></li></a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="" class="text-dark"> <li class="fa fa-google-plus"></li> </a>
+                  <a href="" class="text-dark"> <li class="fa fa-google-plus"></li></a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="" class="text-dark"> <li class="fa fa-instagram"></li> </a>
+                  <a href="" class="text-dark"> <li class="fa fa-instagram"></li></a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="" class="text-dark"> <li class="fa fa-youtube-play"></li> </a>
+                  <a href="" class="text-dark"> <li class="fa fa-youtube-play"></li></a>
                 </li>
               </ul>
             </div>
