--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
     <!-- footer section -->
 
-    <footer class="bg-light text-dark pt-5 pb-4">
+    <footer class="bg-light text-dark pt-5 mb-4 rounded container">
       <div class=" container text-center text-md-left">
         <div class="row text-center text-md-left">
           <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
@@ -253,7 +253,7 @@
             <h5 class="text-uppercase mb-4 font-weight-bold text-info shadow">Let Us Help</h5>
             <hr class="mb-4">
             <p class="paragraph">
-              <a href="" class="text-dark" style="text-decoration: none;">Your Profile</a>
+              <a href="" class="text-dark " style="text-decoration: none;">Your Profile</a>
             </p>
             <p class="paragraph">
               <a href="" class="text-dark" style="text-decoration: none;">Your Orders</a>
