--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
           <!-- bottom cards -->
 
-          <section class=" last-section mt-5 container mb-5">
+          <section class=" media-query last-section mt-5 container mb-5">
             <div class="row d-flex align-items-center">
               <div class="col-md-7">
                 
